--- a/client/src/app/students/students.component.html
+++ b/client/src/app/students/students.component.html
@@ -10,6 +10,9 @@
         <th>Nombre</th>
         <th>Email</th>
         <th>Matricula</th>
+        <th>Nivel academico</th>
+        <th>Carrera</th>
+        <th>Semestre</th>
       </tr>
     </thead>
     <tbody>
@@ -18,6 +21,9 @@
         <td>{{ student.name }}</td>
         <td>{{ student.email }}</td>
         <td>{{ student.matricula }}</td>
+        <td>{{ student.level }}</td>
+        <td>{{ student.career }}</td>
+        <td>{{ student.semester }}</td>
       </tr>
     </tbody>
   </table>
