--- a/client/src/app/students/students.component.css
+++ b/client/src/app/students/students.component.css
@@ -20,6 +20,7 @@ th {
   text-align: left;
   border-bottom: 1px solid #ddd;
   border-bottom: 2px solid #ddd;
+  text-align: center;
 }
 
 tr:nth-child(even) {
